# CIS552

./: LICENSE  README.md  cis552.cabal
src/: Main.hs
src/HW01/: Main.hs
src/HW02/: Main.hs
src/HW03/: Kata.hs  Main.hs  MergeSort.hs  SortedList.hs
src/HW04/: AVL.hs  Main.hs  Sat.hs
src/Lectures/: Classes.lhs  Client.lhs  Concurrency.lhs  DList.lhs  DependentTypes.lhs  GADTs.lhs  GenericMonads.lhs  Kata.lhs  Lec1.lhs  Lec2.lhs  Lec3.lhs  Lec4.lhs  Monads.lhs  Monads2.lhs  MonoidFoldable.lhs  Parsers.lhs  Persistent.lhs  Queue.lhs  QuickCheck.lhs  QuickList.lhs  RandomGen.lhs  RedBlack.lhs  RedBlackGADT.lhs  RedBlackGADTBlackHeight.lhs  STMonad.lhs  SecretCode.lhs  State.lhs  TransC.lhs  TransExercise.lhs  Transformers.lhs  Xml.lhs
