name:                cis552
version:             0.1.0.0
synopsis:            Personal archive for CIS552
description:         No description.
homepage:            https://github.com/peterb12/CIS552#readme
license:             NA
license-file:        LICENSE
author:              peterb12
maintainer:          peterb12
copyright:           2018
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cis552
  hs-source-dirs:      src, src/Lectures, src/HW01, src/HW02, src/HW03, src/HW04, src/HW05, src/HW06
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       HUnit >= 1.6.0.0,
                       hlint >= 2.1.5
  other-modules:       Lec1
